--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "httpx>=0.28.1",
+    "pillow>=11.0.0",
     "python-dotenv[cli]>=1.1.1",
+    "requests>=2.32.4",
+    "textual>=4.0.0",
+    "textual-dev>=1.7.0",
     "websockets>=15.0.1",
 ]
 
